--- a/style.css
+++ b/style.css
@@ -1,36 +1,81 @@
-ul#menu li{
-    display: inline;
-    float: right;
-    padding-right: 5px;
+ul#menu li {
+  display: inline;
+  float: right;
+  padding-right: 5px;
 }
-#search{
-    display: flex;
-    z-index: 3;
-    height: 44px;
-    background: #fff;
-    border: 1px solid #dfe1e5;
-    box-shadow: none;
-    border-radius: 24px;
-    margin: 0 auto;
-    width: 638px;
-    width: auto;
-    max-width: 584px;
+#search {
+  display: flex;
+  z-index: 3;
+  height: 44px;
+  background: #fff;
+  border: 1px solid #dfe1e5;
+  box-shadow: none;
+  border-radius: 24px;
+  margin: 0 auto;
+  width: 638px;
+  width: auto;
+  max-width: 584px;
 }
-.input
-{
-    background-color: transparent;
-    border: none;
-    margin: 0;
-    padding: 0;
-    color: rgba(0,0,0,.87);
-    word-wrap: break-word;
-    outline: none;
-    display: flex;
-    flex: 100%;
-    -webkit-tap-highlight-color: transparent;
-    /* margin-top: -37px; */
-    height: 34px;
-    font-size: 16px;
-    width: 540px;
-    padding-left: 20px;
+.input {
+  background-color: transparent;
+  border: none;
+  margin: 0;
+  padding: 0;
+  color: rgba(0, 0, 0, 0.87);
+  word-wrap: break-word;
+  outline: none;
+  display: flex;
+  flex: 100%;
+  -webkit-tap-highlight-color: transparent;
+  /* margin-top: -37px; */
+  height: 34px;
+  font-size: 16px;
+  width: 540px;
+  padding-left: 20px;
+}
+.lJ9FBc input[type="submit"],
+.gbqfba {
+  background-color: #f8f9fa;
+  border: 1px solid #f8f9fa;
+  border-radius: 4px;
+  color: #3c4043;
+  font-family: arial, sans-serif;
+  font-size: 14px;
+  margin: 11px 4px;
+  padding: 0 16px;
+  line-height: 27px;
+  height: 36px;
+  min-width: 54px;
+  text-align: center;
+  cursor: pointer;
+  user-select: none;
+}
+.lJ9FBc {
+  height: 70px;
+}
+.FPdoLc {
+  padding-top: 18px;
+}
+body,
+input,
+button {
+  font-size: 14px;
+  font-family: arial, sans-serif;
+  color: #202124;
+}
+form {
+  display: block;
+  margin-top: 0em;
+}
+.om7nvf {
+  padding: 20px;
+}
+
+.ikrT4e {
+  max-height: 160px;
+}
+
+.o3j99 {
+  flex-shrink: 0;
+  box-sizing: border-box;
 }
