--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 ul#menu li {
   display: inline;
-  float: right;
+  /* float: right; */
   padding-right: 5px;
 }
 #search {
@@ -78,4 +78,61 @@ form {
 .o3j99 {
   flex-shrink: 0;
   box-sizing: border-box;
+}
+.LS8OJ {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.yr19Zb {
+  min-height: 92px;
+}
+.o3j99 {
+  flex-shrink: 0;
+  box-sizing: border-box;
+}
+.n1xJcf {
+  height: 60px;
+}
+.Ne6nSd {
+  display: flex;
+  align-items: center;
+  padding: 6px;
+}
+.gb_Se {
+  float: right;
+  position: relative;
+}
+.LX3sZb {
+  display: inline-block;
+  flex-grow: 1;
+}
+.gb_Zd .gb_Wd {
+  float: right;
+  padding-left: 32px;
+}
+.gb_Wd {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  height: 48px;
+  line-height: normal;
+  padding: 0 4px;
+  padding-left: 30px;
+  -webkit-flex: 0 0 auto;
+  flex: 0 0 auto;
+  -webkit-box-pack: flex-end;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.gb_Ld {
+  height: 48px;
+  vertical-align: middle;
+  white-space: nowrap;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-user-select: none;
 }
