--- a/style.css
+++ b/style.css
@@ -209,7 +209,59 @@ body {
   white-space: nowrap;
 }
 .appbar {
-  color: blue;
+  color: #d93025;
   font-size: 20px;
   margin: 25px 0px;
+}
+.div.otByu {
+  width: 100%;
+  clear: both;
+}
+div.otByu div.yIQOUb {
+  clear: both;
+}
+div.otByu div.FAcADc {
+  float: left;
+  display: inline-block;
+  min-width: 167px;
+  width: 16%;
+  height: 42px;
+  color: #222;
+  font-size: 13px;
+  line-height: 16px;
+  vertical-align: middle;
+}
+div.otByu div.jYcx0e {
+  float: left;
+  display: inline-block;
+  min-width: 167px;
+  min-height: 41px;
+  vertical-align: middle;
+  width: 50%;
+}
+div.otByu div.cwqNnb {
+  float: left;
+  display: inline-block;
+  width: 32%;
+  min-width: 160px;
+  margin: 0 0 8px 1%;
+  color: #555;
+  font-size: 11px;
+  padding-left: 5px;
+  vertical-align: middle;
+  position: relative;
+}
+.gb_tc .gb_fe:before {
+  content: url("https://www.gstatic.com/images/branding/googlelogo/svg/googlelogo_clr_74x24px.svg");
+  display: inline-block;
+  height: 24px;
+  width: 74px;
+}
+.gb_rc {
+  margin: 0px 15px;
+}
+div.otByu div.jYcx0e input[type="text"],
+div.otByu div.jYcx0e span.PnexQd {
+  width: 100%;
+  text-align: left;
 }
